git-svn-id: http://svn.vdombox.ru/flextools/trunk@8825 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/preview/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/preview/view/components/Toolset.mxml
@@ -25,7 +25,7 @@
 	
 	<s:HGroup height="100%" verticalAlign="middle" paddingBottom="13">
 		
-		<s:Image id="popUpImage" width="16" height="16" source="{ VDOMImage.Class_ }" skinClass="spark.skins.spark.ImageSkin"/>
+		<s:Image id="popUpImage" width="12" height="12" source="@Embed('src/icons/openHosts.png')" skinClass="spark.skins.spark.ImageSkin"/>
 		
 	</s:HGroup>
 	
