--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/AccordionNavigatorContent.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/AccordionNavigatorContent.mxml
@@ -27,6 +27,6 @@
 		]]>
 	</fx:Script>	
 	<s:List id="list" width="100%" height="100%"
-		     itemRenderer="net.vdombox.object_editor.view.ListItemRenderer"	
+		     itemRenderer="net.vdombox.object_editor.view.renderer.AccordionItemRenderer"
 		   	 dataProvider="{arrColl}"  />
 </s:NavigatorContent>
