--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectView.mxml
@@ -48,7 +48,8 @@
 	
 	<s:HGroup right="453" width="100%" gap="19" verticalAlign="top" paddingBottom="10" paddingRight="10">
 		<s:Group width="100%"/>
-		
+
+        <s:Button label="Update descriptions"		id="updateDescriptions" enabled="true"/>
 		<s:Button label="Save"		id="saveObjectTypeButton"				enabled="{isEnabled}"/>
 		<s:Button label="Save as"	id="saveAsObjectTypeButton"				enabled="{isEnabled}"/>
 		<s:Button label="connect"	id="connectObjectTypeToServerButton"	/>
