--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectsAccordion.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/ObjectsAccordion.mxml
@@ -124,7 +124,7 @@
 						 skinClass="spark.skins.spark.TextInputSkin"/>
 			
 			<mx:Image id="cross" height="100%" verticalAlign="middle" right="4" visible="false" 
-					  source="@Embed('assets/cross.png')" click="cross_clickHandler(event)"/>
+					  source="@Embed('/assets/cross.png')" click="cross_clickHandler(event)"/>
 		</s:Group>
 		
 		<mx:Accordion id="accordion" color="0x323232" width="100%" height="100%" doubleClickEnabled="true"/>
