--- a/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
+++ b/TypeEditor/v.02/src/net/vdombox/object_editor/view/essence/Attributes.mxml
@@ -26,107 +26,104 @@
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
-			import mx.collections.ArrayCollection;
-			import mx.controls.Alert;
-			import mx.core.INavigatorContent;
-			import mx.core.IVisualElement;
-			import mx.core.mx_internal;
-			import mx.events.FlexEvent;
-			import mx.messaging.channels.StreamingAMFChannel;
-			
-			import net.vdombox.object_editor.view.AttributesListRenderer;
-			import net.vdombox.object_editor.view.DropDownValue;
-			
-			private var DEFAULT_NUMBER_VALUE:String = int.MAX_VALUE.toString();
-			
-			[Bindable]
-			public  var CodeInterfaceValue:String = "";
-					
-			[Bindable]
-			public var currentAttribute:Object;
-						
-			public function clearAttributeFields():void
-			{
-				fname.text				= "";
-				displayName.text		= "";
-				errMessage.text			= "";//надо удалять содержимое?
-				visibleAtr.selected		= false;
-				help.clearTextArea();
-				
-				attributesList.dataProvider = null;
-			}
-			
-			[Bindable]
-			public var arInterfaceType:ArrayCollection = new ArrayCollection(
-				[ 	{label:"Standard", 		data:0}, 
-					{label:"RichText Editor",data:1}, 
-					{label:"Text Editor", 	data:2}, 
-					{label:"Picture", 		data:3}, 
-					{label:"Special Table", data:4}]);	
-			
-			[Bindable]
-			public var arColorGroup:ArrayCollection = new ArrayCollection(
-				[ 	{label:"None", 	data:0},
-					{label:"Grey", 		 	data:1}, 
-					{label:"Green",			data:2}, 
-					{label:"Red",			data:3}, 
-					{label:"Blue", 			data:4}, 
-				]);	
+        import mx.collections.ArrayCollection;
+        import mx.controls.Alert;
+        import mx.core.INavigatorContent;
+        import mx.core.IVisualElement;
+        import mx.core.mx_internal;
+        import mx.events.FlexEvent;
+        import mx.messaging.channels.StreamingAMFChannel;
 
-			[Bindable]
-			public var arCodeInterface:ArrayCollection = new ArrayCollection(
-				[ 	"TextField",					
-					"Number1", 
-					"MultiLine", 
-					"Font", 
-					"DropDown", 
-					"File", 
-					"Color", 
-					"PageLink", 
-					"LinkedBase", 
-					"ObjectList", 
-					"ExternalEditor"
-				]);	
-/*[ 	{label:"TextField(Length)", 		 data:"TextField(Length)"},
-					{label:"Number(minValue, maxValue)", data:"Number(minValue, maxValue)"}, 
-					{label:"MultiLine(Length)", 		 data:"MultiLine(Length)"}, 
-					{label:"!Font()", 					 data:"!Font()"}, 
-					{label:"DropDown(Values)", 			 data:"DropDown(Values)"}, 
-					{label:"File()", 					 data:"File()"}, 
-					{label:"Color()", 					 data:"Color()"}, 
-					{label:"PageLink()", 				 data:"PageLink()"}, 
-					{label:"LinkedBase()",				 data:"LinkedBase()"}, 
-					{label:"ObjectList()", 				 data:"ObjectList()"}, 
-					{label:"ObjectList(type_id)", 		 data:"ObjectList(type_id)"}, 
-					{label:"ExternalEditor(Title, Info)",data:"ExternalEditor(Title, Info)"}
-				]);*/
-								
-			private function changeField():void
-			{
-				dispatchEvent(new Event( Event.CHANGE ));
-			}			
-			
-			public function addValue(event:Event):void
-			{				
-				dispatchEvent( new FlexEvent(FlexEvent.ADD) );
-			}	
-			
-			public function changeDropDownValue(event:Event):void
-			{				
-				changeStack(false);				
-			}
-			
-			protected function changeStack(isChangeStack:Boolean):void
-			{
-				dispatchEvent( new FlexEvent(FlexEvent.CHANGING, isChangeStack) );
-			}
-			
-		]]>
+        import net.vdombox.object_editor.view.renderer.AttributesListRenderer;
+        import net.vdombox.object_editor.view.DropDownValue;
+
+        private var DEFAULT_NUMBER_VALUE:String = int.MAX_VALUE.toString();
+
+        [Bindable]
+        public var CodeInterfaceValue:String = "";
+
+        [Bindable]
+        public var currentAttribute:Object;
+
+        public function clearAttributeFields():void {
+            fname.text = "";
+            displayName.text = "";
+            errMessage.text = "";//надо удалять содержимое?
+            visibleAtr.selected = false;
+            help.clearTextArea();
+
+            attributesList.dataProvider = null;
+        }
+
+        [Bindable]
+        public var arInterfaceType:ArrayCollection = new ArrayCollection(
+                [
+                    {label: "Standard", data: 0},
+                    {label: "RichText Editor", data: 1},
+                    {label: "Text Editor", data: 2},
+                    {label: "Picture", data: 3},
+                    {label: "Special Table", data: 4}
+                ]);
+
+        [Bindable]
+        public var arColorGroup:ArrayCollection = new ArrayCollection(
+                [
+                    {label: "None", data: 0},
+                    {label: "Grey", data: 1},
+                    {label: "Green", data: 2},
+                    {label: "Red", data: 3},
+                    {label: "Blue", data: 4},
+                ]);
+
+        [Bindable]
+        public var arCodeInterface:ArrayCollection = new ArrayCollection(
+                [     "TextField",
+                    "Number1",
+                    "MultiLine",
+                    "Font",
+                    "DropDown",
+                    "File",
+                    "Color",
+                    "PageLink",
+                    "LinkedBase",
+                    "ObjectList",
+                    "ExternalEditor"
+                ]);
+        /*[ 	{label:"TextField(Length)", 		 data:"TextField(Length)"},
+         {label:"Number(minValue, maxValue)", data:"Number(minValue, maxValue)"},
+         {label:"MultiLine(Length)", 		 data:"MultiLine(Length)"},
+         {label:"!Font()", 					 data:"!Font()"},
+         {label:"DropDown(Values)", 			 data:"DropDown(Values)"},
+         {label:"File()", 					 data:"File()"},
+         {label:"Color()", 					 data:"Color()"},
+         {label:"PageLink()", 				 data:"PageLink()"},
+         {label:"LinkedBase()",				 data:"LinkedBase()"},
+         {label:"ObjectList()", 				 data:"ObjectList()"},
+         {label:"ObjectList(type_id)", 		 data:"ObjectList(type_id)"},
+         {label:"ExternalEditor(Title, Info)",data:"ExternalEditor(Title, Info)"}
+         ]);*/
+
+        private function changeField():void {
+            dispatchEvent(new Event(Event.CHANGE));
+        }
+
+        public function addValue(event:Event):void {
+            dispatchEvent(new FlexEvent(FlexEvent.ADD));
+        }
+
+        public function changeDropDownValue(event:Event):void {
+            changeStack(false);
+        }
+
+        protected function changeStack(isChangeStack:Boolean):void {
+            dispatchEvent(new FlexEvent(FlexEvent.CHANGING, isChangeStack));
+        }
+        ]]>
 	</fx:Script>
 	<s:Scroller width="{this.width}" height="{this.height}">
 	<s:HGroup>
 		<s:VGroup height="{300}" toolTip="You can drag and drop attributes">
-			<s:List  itemRenderer="net.vdombox.object_editor.view.AttributesListRenderer"  id="attributesList" height="{height- 50}" width="100%" dragMoveEnabled="true" dragEnabled="true" dropEnabled="true" change="this.currentAttribute=List(event.target).selectedItem"/>
+			<s:List  itemRenderer="net.vdombox.object_editor.view.renderer.AttributesListRenderer"  id="attributesList" height="{height- 50}" width="100%" dragMoveEnabled="true" dragEnabled="true" dropEnabled="true" change="this.currentAttribute=List(event.target).selectedItem"/>
 			<s:HGroup>
 				<s:Button id="addAttributeButton" label="Add"/>
 				<s:Button id="deleteAttributeButton" label="Delete" enabled="{attributesList.selectedIndex != -1}"/>
