git-svn-id: http://svn.vdombox.ru/flextools/trunk@8846 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesArea.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesArea.mxml
@@ -3,7 +3,7 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" 
 		 xmlns:button="net.vdombox.ide.common.view.components.button.*"
-		 creationComplete="group1_creationCompleteHandler(event)">
+		 creationComplete="group1_creationCompleteHandler(event)" xmlns:components="net.vdombox.ide.modules.resourceBrowser.view.components.*">
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
@@ -135,6 +135,7 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	
 	
 	<s:VGroup width="100%" height="100%" gap="0">
 		
