git-svn-id: http://svn.vdombox.ru/flextools/trunk@8847 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/SpinnerPopupSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/SpinnerPopupSkin.mxml
@@ -39,6 +39,16 @@
 		
 		<s:Label id="spinnerLabel" text="" textAlign="center" color="white" 
 				 fontWeight="normal" fontFamily="Arial" fontSize="12" />
+		
+		<s:Label id="resourceName" color="white" 
+				 fontWeight="normal" fontFamily="Arial" fontSize="12"/>
+		
+		<s:Label id="resourceStatus" color="white" 
+				 fontWeight="normal" fontFamily="Arial" fontSize="12"/>
+		
+		<s:Label id="totalCountResource" color="white" 
+					 fontWeight="normal" fontFamily="Arial" fontSize="12"/>
+		
 	</s:VGroup>
 	
 </s:SparkSkin>
